tester/src/test/aya/failure/scope/unknown-prim.aya.txt
In file $FILE:1:5 ->

  1 | prim YYUT
           ^--^
  
Error: Unknown primitive `YYUT`
Parsing interrupted due to errors.
What are you doing?
